# ISO_Standards

./: .editorconfig  DEPLOYMENT_COMPLETE.txt  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SETUP.md  DOCUMENTATION_INDEX.md  FRONTEND_CHECKLIST.md  FRONTEND_DEPLOYMENT_COMPLETE.md  ISO_Standards.code-workspace  OIDC_AUTHENTICATION_FIXED.md  QUICK_START.md  README.md  cloudfront-config.json  pyproject.toml  todo.md
.github/: copilot-instructions.md
.github/workflows/: README.md  ci.yml  deploy-frontend.yml  deploy_frontend.yml  test-backend.yml  test-frontend.yml  test_backend.yml  test_frontend.yml
Backend/: .env.example  .env.production.example  .envrc  .gitignore  .pre-commit-config.yaml  DOCKER_RUNTIME_ISSUE.md  Dockerfile.prod  LINTING.md  Makefile  PYTEST_GUIDE.md  RDS_QUICK_REFERENCE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
Backend/accounts/: admin.py  forms.py  models.py
Backend/accounts/migrations/: 0001_initial.py
Backend/accounts/tests/: README.md  conftest.py  test_accounts_models.py  test_admin.py  test_forms.py  test_integration.py
Backend/config/: urls.py
Backend/config/settings/: __init__.py  base.py  development.py  production.py  test.py
Backend/config/settings/tests/: test_settings.py
Backend/config/tests/: DATABASE_TESTS.md  README.md  TESTING_SUMMARY.md  conftest.py  test_asgi.py  test_database.py  test_environment.py  test_urls.py  test_wsgi.py
Backend/docker/postgres/init/: init.sql
Backend/scripts/: test_all_environments.sh
Docs/: DOCUMENTATION_INDEX.md  LINTING.md  POSTGRES_SETUP.md  PROJECT_OVERVIEW.md  QUICK_START.md  RDS_MIGRATION_COMPLETE.md  README.md  SETUP_CHECKLIST.md  SETUP_COMPLETE.md  SETUP_PLAN.md  aws-rds-migration-plan.md
Docs/Deployment_Doc/: ARCHITECTURE_SUMMARY.md  AWS_DEPLOYMENT_GUIDE.md  BACKEND_DEPLOYMENT_QUICK_REF.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SETUP.md  JWT_AUTHENTICATION.md  README.md
Docs/Frontend/: FRONTEND_CHECKLIST.md  FRONTEND_DEPLOYMENT_COMPLETE.md  FRONTEND_DEPLOYMENT_STATUS.md  FRONTEND_READY.md  REACT_STARTER_PACK.md
Docs/Github/: GITHUB_ACTIONS_READY.md  OIDC_AUTHENTICATION_FIXED.md  OIDC_SETUP_COMPLETE.md  github-actions-policy.json  github-actions-trust-policy.json
Docs/Refactor/: env_refactor.md
Frontend/: .env  IMPLEMENTATION_SUMMARY.md  SETUP_CHECKLIST.md  SETUP_COMPLETE.md  SETUP_PLAN.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/components/layout/: Footer.test.tsx  Footer.tsx  Header.test.tsx  Header.tsx  MainLayout.test.tsx  MainLayout.tsx
Frontend/src/hooks/: index.ts  useAuth.test.ts  useAuth.ts  useDebounce.test.ts  useLocalStorage.test.ts  useLocalStorage.ts  useMediaQuery.test.ts  useMediaQuery.ts
Frontend/src/pages/: Home.test.tsx  Home.tsx
Frontend/src/services/: api.ts  auth.ts  standards.ts
Frontend/src/stores/: authStore.ts
Frontend/src/tests/mocks/: queryClient.ts
Frontend/src/theme/: colors.ts  theme.ts  typography.ts
Frontend/src/types/: api.ts  index.ts  standard.ts  user.ts
Frontend/src/utils/: constants.ts  format.test.ts  format.ts  helpers.test.ts  helpers.ts  index.ts  validation.test.ts  validation.ts
