[tool.poetry]
name = "ISO_Standards"
version = "0.1.0"
description = ""
authors = ["Benedict Thekkel <bthekkel1@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
package-mode = false

[tool.poetry.dependencies]
django = "5.1.2"
asgiref = "3.8.1"
certifi = "2022.12.7"
charset-normalizer = "3.0.1"
crispy-bootstrap5 = "2024.10"
cryptography = "39.0.1"
defusedxml = "0.7.1"
django-allauth = "65.0.2"
django-crispy-forms = "2.3"
django-debug-toolbar = "4.4.6"
gunicorn = "23.0.0"
idna = "3.4"
oauthlib = "3.2.2"
packaging = "23.1"
psycopg = "3.2.3"
psycopg-binary = "3.2.3"
pycparser = "2.21"
pyjwt = "2.6.0"
python3-openid = "3.2.0"
requests = "2.28.2"
requests-oauthlib = "1.3.1"
sqlparse = "0.4.3"
typing-extensions = "4.9.0"
urllib3 = "1.26.14"
whitenoise = "6.7.0"
djangorestframework = "^3.15.2"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-benchmark = "^5.1.0"
django-environ = "^0.11.2"
django-hijack = "^3.7.1"
black = "^24.10.0"
ruff = "^0.8.5"
django-extensions = "^3.2.3"
dj-database-url = "^2.3.0"
django-phonenumber-field = "^8.0.0"
phonenumbers = "^8.13.53"


[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
cliniko-api-client = { path = "crms/cliniko/cliniko-api-client" }

[tool.pytest.ini_options]
log_cli = false  # Only show logs for failed tests
log_cli_level = "INFO"
addopts = "--tb=short --show-capture=no -ra"  # short tracebacks, show all except passed
DJANGO_SETTINGS_MODULE = "rmproject.settings.dev"
python_files = ["*test*.py","tests/*.py"]
console_output_style = "progress"  # Show dots for passing tests
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning:polymorphic",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external APIs",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.2",
    "pytest-cov>=6.3.0",
]

[tool.ruff]
line-length = 88
exclude = ["migrations", ".venv", "static", "media"]
extend-include = ["*.ipynb"]
target-version = "py313"
fix = true

[tool.nbqa.mutate]
ruff = true

[tool.nbqa.addopts]
ruff = ["--fix", "--exit-zero"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint]
select = [
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # flake8-bugbear
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    # "E",    # pycodestyle errors
    # "F",    # pyflakes
    # "A",    # flake8-builtins
    # "ANN",  # flake8-annotations
    # "ARG",  # flake8-unused-arguments
    # "ASYNC",# flake8-async
    # "C4",   # flake8-comprehensions
    # "C90",  # mccabe (complexity)
    # "DTZ",  # flake8-datetimez
    # "D",    # pydocstyle
    # "DJ",   # flake8-django
    # "EM",   # flake8-errmsg
    # "ERA",  # eradicate
    # "EXE",  # flake8-executable
    # "G",    # flake8-logging-format
    # "ICN",  # flake8-import-conventions
    # "INP",  # flake8-no-pep420
    # "ISC",  # flake8-implicit-str-concat
    # "N",    # pep8-naming
    # "PD",   # pandas-vet
    # "PGH",  # pygrep-hooks
    # "PIE",  # flake8-pie
    # "PL",   # pylint
    # "PLE",  # pylint error
    # "PLR",  # pylint refactor
    # "PLW",  # pylint warning
    # "RSE",  # flake8-raise
    # "RET",  # flake8-return
    # "RUF",  # Ruff-specific rules
    # "S",    # flake8-bandit
    # "SIM",  # flake8-simplify
    # "SLF",  # flake8-self
    # "T10",  # flake8-debugger
    # "T20",  # flake8-print
    # "TID",  # flake8-tidy-imports
    # "TRY",  # tryceratops
]

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
/(
    \.venv
  | migrations
  | static
  | templates
  | .*\.pyi
)/
'''
