[project]
name = "rm-project"
version = "0.1.0"
description = "Recovery Metrics"
authors = [
  { name = "Benedict Thekkel", email = "bthekkel1@gmail.com" },
  { name = "Brett Beeson", email = "brettbeeson@fastmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "blessed>=1.21.0",
    "coverage>=7.8.0",
    "crispy-bootstrap5>=2025.4",
    "debugpy>=1.8.14",
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-admin-env-notice>=1.0.1",
    "django-allauth>=65.7.0",
    "django-cors-headers>=4.7.0",
    "django-crispy-forms>=2.4",
    "django-dbbackup>=4.2.1",
    "django-debug-toolbar>=5.2.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-import-export>=4.3.7",
    "django-oauth-toolkit>=3.0.1",
    "django-phonenumber-field>=8.1.0",
    "django-polymorphic>=3.1.0",
    "django-post-office>=3.9.1",
    "django-q2>=1.8.0",
    "django-redis>=5.4.0",
    "django-ses>=4.4.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.0",
    "djangorestframework-datatables>=0.7.2",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "factory-boy>=3.3.3",
    "faker>=37.1.0",
    "freezegun>=1.5.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.25",
    "markdown>=3.8",
    "matplotlib>=3.10.7",
    "mypy>=1.16.1",
    "nbqa>=1.9.1",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "phonenumbers>=9.0.4",
    "plotly>=6.0.1",
    "pre-commit>=4.2.0",
    "psycopg>=3.2.7",
    "psycopg2-binary>=2.9.10",
    "pycountry>=24.6.1",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "ruff>=0.11.8",
    "setuptools>=80.1.0",
    "weasyprint>=65.1",
    "whitenoise>=6.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true


[tool.pytest.ini_options]
log_cli = false  # Only show logs for failed tests
log_cli_level = "INFO"
addopts = "--tb=short --show-capture=no -ra"  # short tracebacks, show all except passed
DJANGO_SETTINGS_MODULE = "rmproject.settings.dev"
python_files = ["*test*.py","tests/*.py"]
console_output_style = "progress"  # Show dots for passing tests
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning:polymorphic",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external APIs",
]

[dependency-groups]
dev = [
]

[tool.ruff]
line-length = 88
exclude = ["migrations", ".venv", "static", "media"]
extend-include = ["*.ipynb"]
target-version = "py313"
fix = true

[tool.nbqa.mutate]
ruff = true

[tool.nbqa.addopts]
ruff = ["--fix", "--exit-zero"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint]
select = [
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # flake8-bugbear
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    # "E",    # pycodestyle errors
    # "F",    # pyflakes
    # "A",    # flake8-builtins
    # "ANN",  # flake8-annotations
    # "ARG",  # flake8-unused-arguments
    # "ASYNC",# flake8-async
    # "C4",   # flake8-comprehensions
    # "C90",  # mccabe (complexity)
    # "DTZ",  # flake8-datetimez
    # "D",    # pydocstyle
    # "DJ",   # flake8-django
    # "EM",   # flake8-errmsg
    # "ERA",  # eradicate
    # "EXE",  # flake8-executable
    # "G",    # flake8-logging-format
    # "ICN",  # flake8-import-conventions
    # "INP",  # flake8-no-pep420
    # "ISC",  # flake8-implicit-str-concat
    # "N",    # pep8-naming
    # "PD",   # pandas-vet
    # "PGH",  # pygrep-hooks
    # "PIE",  # flake8-pie
    # "PL",   # pylint
    # "PLE",  # pylint error
    # "PLR",  # pylint refactor
    # "PLW",  # pylint warning
    # "RSE",  # flake8-raise
    # "RET",  # flake8-return
    # "RUF",  # Ruff-specific rules
    # "S",    # flake8-bandit
    # "SIM",  # flake8-simplify
    # "SLF",  # flake8-self
    # "T10",  # flake8-debugger
    # "T20",  # flake8-print
    # "TID",  # flake8-tidy-imports
    # "TRY",  # tryceratops
]

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
/(
    \.venv
  | migrations
  | static
  | templates
  | .*\.pyi
)/
'''
