[project]
name = "rm-project"
version = "0.1.0"
description = "Recovery Metrics"
authors = [
  { name = "Benedict Thekkel", email = "bthekkel1@gmail.com" },
  { name = "Brett Beeson", email = "brettbeeson@fastmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "blessed>=1.21.0",
    "coverage>=7.8.0",
    "crispy-bootstrap5>=2025.4",
    "debugpy>=1.8.14",
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-admin-env-notice>=1.0.1",
    "django-allauth>=65.7.0",
    "django-cors-headers>=4.7.0",
    "django-crispy-forms>=2.4",
    "django-dbbackup>=4.2.1",
    "django-debug-toolbar>=5.2.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-import-export>=4.3.7",
    "django-oauth-toolkit>=3.0.1",
    "django-phonenumber-field>=8.1.0",
    "django-polymorphic>=3.1.0",
    "django-post-office>=3.9.1",
    "django-q2>=1.8.0",
    "django-redis>=5.4.0",
    "django-ses>=4.4.0",
    "django-storages>=1.14.6",
    "django-stubs>=5.1.3",
    "djangorestframework>=3.16.0",
    "djangorestframework-datatables>=0.7.2",
    "djangorestframework-simplejwt>=5.5.0",
    "djangorestframework-stubs>=3.15.4",
    "drf-spectacular>=0.28.0",
    "factory-boy>=3.3.3",
    "faker>=37.1.0",
    "freezegun>=1.5.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.25",
    "markdown>=3.8",
    "matplotlib>=3.10.7",
    "mypy>=1.16.1",
    "nbqa>=1.9.1",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "phonenumbers>=9.0.4",
    "plotly>=6.0.1",
    "pre-commit>=4.2.0",
    "psycopg>=3.2.7",
    "psycopg2-binary>=2.9.10",
    "pycountry>=24.6.1",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "ruff>=0.11.8",
    "setuptools>=80.1.0",
    "types-requests>=2.32.0",
    "weasyprint>=65.1",
    "whitenoise>=6.9.0",
]

[build-system]
requires = ["setuptools>=80.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["config", "accounts"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.pytest.ini_options]
log_cli = false  # Only show logs for failed tests
log_cli_level = "INFO"
addopts = "--tb=short --show-capture=no -ra"  # short tracebacks, show all except passed
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["*test*.py","tests/*.py"]
console_output_style = "progress"  # Show dots for passing tests
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning:polymorphic",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external APIs",
    "development: marks tests that only run with development settings",
]

[dependency-groups]
dev = [
]

[tool.ruff]
line-length = 88
exclude = ["migrations", ".venv", "static", "media"]
extend-include = ["*.ipynb"]
target-version = "py313"
fix = true

[tool.nbqa.mutate]
ruff = true

[tool.nbqa.addopts]
ruff = ["--fix", "--exit-zero"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "I",    # isort
    "B",    # flake8-bugbear
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "C4",   # flake8-comprehensions
    "C90",  # mccabe (complexity)
    "DJ",   # flake8-django
    "N",    # pep8-naming
    "PLE",  # pylint error
    "PLW",  # pylint warning
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TID",  # flake8-tidy-imports
    "ERA",  # eradicate (commented out code)
    "PIE",  # flake8-pie
    "ISC",  # flake8-implicit-str-concat
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    # "A",    # flake8-builtins - may conflict with Django
    # "ANN",  # flake8-annotations - enable when ready for full type hints
    # "ASYNC",# flake8-async
    # "DTZ",  # flake8-datetimez - Django handles timezone well
    # "D",    # pydocstyle - enable when ready for full docstrings
    # "EM",   # flake8-errmsg
    # "EXE",  # flake8-executable
    # "G",    # flake8-logging-format
    # "ICN",  # flake8-import-conventions
    # "INP",  # flake8-no-pep420
    # "PD",   # pandas-vet
    # "PGH",  # pygrep-hooks
    # "PLR",  # pylint refactor - can be noisy
    # "RSE",  # flake8-raise
    # "SLF",  # flake8-self
    # "TRY",  # tryceratops
]

ignore = [
    "S101",    # Use of assert detected (pytest uses assert)
    "S105",    # Possible hardcoded password
    "S106",    # Possible hardcoded password
    "DJ001",   # Avoid using null=True on string-based fields
    "RUF012",  # Mutable class attributes
    "N818",    # Exception name should be named with an Error suffix
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["S101", "ARG", "PLR2004"]  # Allow assert, unused args, magic values in tests
"*/migrations/*" = ["ALL"]  # Ignore all rules in migrations
"manage.py" = ["T20"]  # Allow print in manage.py
"*/settings/*" = ["F405", "F403"]  # Allow * imports in settings

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
/(
    \.venv
  | migrations
  | static
  | templates
  | .*\.pyi
)/
'''

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
strict = false  # Set to true when ready for full type checking
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
disallow_untyped_calls = false  # Set to true gradually
disallow_untyped_defs = false   # Set to true gradually
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
exclude = [
    "migrations/",
    "venv/",
    ".venv/",
    "static/",
    "media/",
]

[[tool.mypy.overrides]]
module = [
    "allauth.*",
    "crispy_forms.*",
    "crispy_bootstrap5.*",
    "debug_toolbar.*",
    "rest_framework.*",
    "corsheaders.*",
    "environ.*",
    "phonenumber_field.*",
    "polymorphic.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.bandit]
exclude_dirs = [
    "*/tests/*",
    "*/migrations/*",
    "*/.venv/*",
    "*/static/*",
]
skips = [
    "B101",  # Use of assert detected (pytest uses assert)
    "B601",  # Parameterized shell command (Django management commands are safe)
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/.venv/*",
    "*/static/*",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
